# ScriptCollection

SLAM/ans1/: README.md
SLAM/ans2/: 1.A survey of monocular SLAM.md
SLAM/ch2/: CMakeLists.txt  helloSLAM.cpp  libHelloSLAM.cpp
SLAM/ch3/examples/: CMakeLists.txt  coordinateTransform.cpp  plotTrajectory.cpp
SLAM/ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
SLAM/ch3/useGeometry/: CMakeLists.txt  useGeometry.cpp
c++/: c++11的特性.md
git/: git stash.md  git.md
labels/: balance_coco.py  coco2labelme.py  combine_coco.py  get_coco_nums.py  get_coco_random.py  google_download.md  labelme2coco.py  readme.md  run.sh  split_trainval.py
